--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     final ARCHITECTURE_COMPONENT_VERSION = '1.1.1'
     final LOTTIE_ANDROID_VERSION = '2.5.4'
     final ROOM_VERSION = '1.1.1'
+    final FACEBOOK_SHIMMER = "0.5.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -116,6 +117,11 @@ dependencies {
 
     kapt "com.google.dagger:dagger-android-processor:$dagger2"
     kapt "com.google.dagger:dagger-compiler:$dagger2"
+
+    implementation "com.facebook.shimmer:shimmer:$FACEBOOK_SHIMMER"
+
+    //New Material Design
+    implementation "com.google.android.material:material:$material"
 
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
