--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/MaterialTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".base.view.base.MainActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize">
+            android:theme="@style/MaterialTheme.LightNav.White">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
